# flashlab

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: translation.json
flashlab/: __init__.py  __main__.py  flashcode.py  flashcode_mapping.py  flashlab.py  flashlab_qt6.py  flashlab_shell.py  options.json
scripts/: options_parser.py
